2005-02-06  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Shlibs.pm: Removed ref to {SHLIB_DEPS} and added comment for upcoming
	RunTimeDepends
	* PkgVersion.pm: Removed refs to {SHLIB_DEPS}, added check for
	AddShlibDeps to run auto adding of depends for deb file creation. Added
	RunTimeDepends to PkgVersion.pm.

2005-02-08  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Fix plural in package count msg.
	* Configure.pm: Rework proxy prompting: consolidate whole msg into
	$prompt, add note about value visibility, clean up variable usage.
	Ignore whitespace in answers. Add msg if skipping UseBinaryDist.

2005-02-08  Daniel Macks  <dmacks@netspace.org>

	* CLI.pm: don't export obsoleted prompt_selection_new
	* PkgVersion.pm: fixed a prompt*() API-change straggler.

2005-02-08  Dave Vasilevsky  <vasi@users.sourceforge.net>

	* CLI.pm: Rename prompt_selction_new prompt_selection. Switch
	prompt, prompt_boolean, and prompt_selection to use named
	parameters.
	* *.pm: Adjust prompt*() calls for new API.

2005-02-06  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Bootstrap.pm: Replacing ncurses with libncurses5 for bootstraping

2005-02-06  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Fix .deb-creation error checking.

2005-02-05  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: ...which it now does, so reviving it

2005-02-05  Justin F. Hallett  <thesin@users.sourceforge.net>

	* Engine.pm: backing out last change till it's complete and works

2005-02-05  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: first arg to process() is ref to original @ARGV not
	scalar concat of canonical getopt flags. First restart_as_root arg
	is no longer handled as specially-preprocessed text.

2005-02-05  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Alphabetize and remove duplicates in output of show-deps.

2005-02-03  Justin F. Hallett  <thesin@users.sourceforge.net>

	* shilbs branch is now fully working and merged to head.