@@ -1,7 +1,8 @@
 2005-02-06  Justin F. Hallett  <thesin@users.sourceforge.net>
 
-	* Shlibs.pm: Removed ref to {SHLIB_DEPS} and added comment for upcoming
-	RunTimeDepends
+	* Shlibs.pm: Removed ref to {SHLIB_DEPS} and added RunTimeDepends to
+	depends duplication checks (Allows for a maintainer to force a certain
+	version of a dep)
 	* PkgVersion.pm: Removed refs to {SHLIB_DEPS}, added check for
 	AddShlibDeps to run auto adding of depends for deb file creation. Added
 	RunTimeDepends to PkgVersion.pm.
